# conway-raylib

./: README.md  generator.py  make_web.bash
docs/: index.html  main.js  main.wasm
presets/: 6bits.txt  bi_gun.txt  blocker.txt  glider_pusher.txt  new_gun_1.txt  p46_gun.txt  simkin_glider_gun.txt
src/: CMakeLists.txt  conway.h  main.c  presets.h
